# Neural-Mass

./: .gitignore  NOTES.md  README.md  RESEARCH_STATUS.md  analyze_dreams_thalamocortical_fit.py  analyze_real_kcomplex.py  compare_dreams_annotations.py  demo.py  dreams_kcomplex_classifier.py  dreams_kcomplex_validation.py  dreams_window_detector.py  fit_dreams_kcomplex_waveform.py  generate_cases.py  generate_dreams_plots.py  generate_hmc_plots.py  mass_kcomplex_validation.py  pyproject.toml  requirements.txt  research_benchmark.py  run_clinical_demo.py  run_dashboard.py  run_full_pipeline.py  run_network_demo.py  run_optimization.py  run_organic_demo.py  run_thalamocortical_demo.py  run_v1_test.py  test_metrics.py  test_real_data.py  tune_dreams_kcomplex.py  validate_dreams_pipeline.py  validate_first_layer.py
benchmarks/: __init__.py  compare_dreams_annotations.py  dreams_window_detector.py  fit_kcomplexes_to_model.py  hmc_finetune.py  hmc_window_detector.py
examples/: __init__.py  demo_option_a.py  dreams_kcomplex_waveform_fit.py  dreams_thalamocortical_fit.py  fit_kcomplexes_to_model.py  run_clinical_demo.py  run_full_pipeline.py  thalamocortical_demo.py
kcomplex-detector/: README.md  pyproject.toml
kcomplex-detector/benchmarks/: compare_dreams_annotations.py  dreams_window_detector.py  hmc_finetune.py  hmc_window_detector.py
kcomplex-detector/kcomplex_detector/: __init__.py  clinical.py  detector.py  event_detection.py  kcomplex_features.py  kcomplex_window_detector.py
kcomplex-detector/kcomplex_detector/utils/: __init__.py  data_loader.py  dreams_io.py
kcomplex-detector/scripts/: generate_dreams_plots.py  generate_hmc_plots.py
kcomplex-detector/tests/: test_clinical.py  test_dreams_dataset.py  test_event_detection.py  test_event_scoring.py  test_kcomplex_features.py  test_kcomplex_window_detector.py
neural-mass-model/: NOTES.md  README.md  pyproject.toml
neural-mass-model/examples/: run_spatiotemporal_demo.py
neural-mass-model/figures/: calibrated_stage_params.json
neural-mass-model/neural_mass/: __init__.py
neural-mass-model/neural_mass/inference/: inference.py  thalamocortical_fitting.py
neural-mass-model/neural_mass/models/: _models.py  thalamocortical_model.py
neural-mass-model/neural_mass/signal/: __init__.py  kcomplex_features.py
neural-mass-model/neural_mass/utils/: metrics.py  preprocessing.py
neural-mass-model/scripts/: calibrate_stages.py  plot_fit_vs_target.py
neural-mass-model/tests/: test_final_fixes.py  test_graph.py  test_inference.py  test_metrics_core.py  test_multi_objective_fitting.py  test_spectral_fitting.py  test_templated_fitting.py
neural_mass.egg-info/: PKG-INFO  (+3 more)
(+58 files in other folders)
