[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neural-mass"
version = "0.1.0"
description = "Neural mass model library for sleep EEG analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "optuna>=3.0",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib", "mne"]

[project.urls]
Repository = "https://github.com/AbhishekRavi063/Neural-Mass"

[tool.setuptools.packages.find]
where = ["."]
include = ["neural_mass*"]
