[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-mass"
version = "0.1.0"
description = "Neural mass models for sleep EEG simulation and Optuna parameter fitting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "optuna>=3.0",
]

[project.optional-dependencies]
# Install with: pip install -e ".[dev]"
dev = ["pytest", "matplotlib>=3.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["neural_mass*"]
